# quanta-sensors

./: CMakeLists.txt  README.md
include/: OEMSensor.hpp  Utils.hpp
service_files/: xyz.openbmc_project.oemsensor.service
src/: OEMSensor.cpp  OEMSensorMain.cpp
